--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "bojaghi/template": "^1.0",
         "bojaghi/fields": "^1.0",
         "bojaghi/fields-render": "^1.0",
-        "bojaghi/admin-ajax": "^1.0"
+        "bojaghi/admin-ajax": "^1.0",
+        "bojaghi/custom-posts": "^1.0"
     },
     "require-dev": {
         "bojaghi/wp-tests": "^1.1",
